--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -30,11 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   http: ^1.6.0
+  supabase_flutter: ^2.10.3
+
+
+  # + whatever was already there
+
 
 dev_dependencies:
   flutter_test:
