--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -35,9 +35,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.6.0
   supabase_flutter: ^2.10.3
-  image_picker: ^1.0.7
-  mobile_scanner: ^5.2.3
-  geolocator: ^13.0.2
+
+
+  # + whatever was already there
 
 
 dev_dependencies:
