finishing admin dash

--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,8 @@ web/IMPLEMENTATION_SUMMARY.md
 web/CITIZEN_FLOW_README.md
 web/BACKEND_INTEGRATION.md
 web/TESTING_GUIDE.md
+ADMIN_FEATURES.md
+API_DOCUMENTATION.md
+ADMIN_DASHBOARD_GUIDE.md
+FUTURE_FEATURES.md
+*.md
